# Django-Template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
core/project/: wsgi.py
core/project/settings/: local.py  main.py
docker_compose/: app.yaml  entrypoint.sh  storages.yaml
